# Personal-Project

./: .gitattributes  .gitignore
Kaggle/: README.md  kaggle.code-workspace  new_comp.ps1
Kaggle/00_comp_template/: requirements.txt
Kaggle/UM_GamePlayingStrength/: .gitignore
Kaggle/UM_GamePlayingStrength/experiments/exp001/: train.ipynb
Kaggle/comp_001_titanic/: requirements.txt
Kaggle/comp_002_GamePlayingStrength/: requirements.txt
Kaggle/comp_002_GamePlayingStrength/experiments/exp001/: train.ipynb
Kaggle/comp_template/: requirements.txt
Kaggle/image-matching-challenge-2025/: pyproject.toml  setup.sh
Kaggle/image-matching-challenge-2025/experiments/exp000/: chap2_cv.ipynb  chap3_pytorch.ipynb  wandb_upload_imgs.py
Kaggle/image-matching-challenge-2025/experiments/exp001/: baseline-dinov2-aliked-lightglue.ipynb  config.py  train.ipynb
Kaggle/image-matching-challenge-2025/experiments/exp001/results/exp001/: submission.csv
Kaggle/image-matching-challenge-2025/src/: dataset.py  evaluate.py  features.py  matching.py  utils.py
Kaggle/image-matching-challenge-2025/src/imc2025lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Kaggle/titanic/experiments/exp001/: ch04-exp001.ipynb  train.ipynb
